force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/ucinn_ascendv2__Review_Transaction_v2__c.object-meta.xml
<CustomObject>
    <description>Staging object for pledges, gifts and payments coming from the interfaces that are automatically processed, or can be subject for review.  Version 2.</description>
    <label>Review Transaction (v2)</label>
    <nameField>
        <label>Review Transaction v2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Transactions (v2)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>