force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Accounting_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Amount__c</fullName>
    <label>Accounting Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>