force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Asset_Subset__c.field-meta.xml
<CustomField>
    <fullName>Asset_Subset__c</fullName>
    <label>Asset Subset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>