force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Automatic_Payments_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Payments_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Payments Enabled</label>
    <type>Checkbox</type>
</CustomField>