force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Confidential_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Indicator__c</fullName>
    <inlineHelpText>Enter &quot;Confidential ISU&quot; to make the gift confidential</inlineHelpText>
    <label>Confidential Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>