force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Constituent_Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Spouse_Name__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Full_Name_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Spouse Name</label>
    <type>Text</type>
</CustomField>