force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Contingent__c.field-meta.xml
<CustomField>
    <fullName>Contingent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contingent</label>
    <type>Checkbox</type>
</CustomField>