force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Create_Interim__c.field-meta.xml
<CustomField>
    <fullName>Create_Interim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Interim</label>
    <type>Checkbox</type>
</CustomField>