force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <label>Created Date Time</label>
    <type>DateTime</type>
</CustomField>