force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Cyclone_Club__c.field-meta.xml
<CustomField>
    <fullName>Cyclone_Club__c</fullName>
    <label>Cyclone Club</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include on Reports to Athletics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>