force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Designation_10__c.field-meta.xml
<CustomField>
    <fullName>Designation_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation 10</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Designation 10)</relationshipLabel>
    <relationshipName>Review_Transactions_v24</relationshipName>
    <type>Lookup</type>
</CustomField>