force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Designation_6__c.field-meta.xml
<CustomField>
    <fullName>Designation_6__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation 6</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Designation 6)</relationshipLabel>
    <relationshipName>Review_Transactions_v2</relationshipName>
    <type>Lookup</type>
</CustomField>