force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Designation_7__c.field-meta.xml
<CustomField>
    <fullName>Designation_7__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation 7</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Designation 7)</relationshipLabel>
    <relationshipName>Review_Transactions_v21</relationshipName>
    <type>Lookup</type>
</CustomField>