force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Designation_External_ID_6__c.field-meta.xml
<CustomField>
    <fullName>Designation_External_ID_6__c</fullName>
    <label>Designation External ID 6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>