force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Designation_External_ID_7__c.field-meta.xml
<CustomField>
    <fullName>Designation_External_ID_7__c</fullName>
    <label>Designation External ID 7</label>
    <length>225</length>
    <type>Text</type>
</CustomField>