force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Designation_Names__c.field-meta.xml
<CustomField>
    <fullName>Designation_Names__c</fullName>
    <formula>ucinn_ascendv2__Designation_1__r.ucinn_ascendv2__Designation_Name__c &amp;BR()&amp;
ucinn_ascendv2__Designation_2__r.ucinn_ascendv2__Designation_Name__c &amp;BR()&amp;
ucinn_ascendv2__Designation_3__r.ucinn_ascendv2__Designation_Name__c &amp;BR()&amp;
ucinn_ascendv2__Designation_4__r.ucinn_ascendv2__Designation_Name__c &amp;BR()&amp;
ucinn_ascendv2__Designation_5__r.ucinn_ascendv2__Designation_Name__c &amp;BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation Names</label>
    <type>Text</type>
</CustomField>