force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>ucinn_ascendv2__Disbursement__c</referenceTo>
    <relationshipLabel>Review Transactions (v2)</relationshipLabel>
    <relationshipName>Review_Transactions_v2</relationshipName>
    <type>Lookup</type>
</CustomField>