force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Document_Received__c.field-meta.xml
<CustomField>
    <fullName>Document_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Received</label>
    <type>Checkbox</type>
</CustomField>