force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Encrypted_Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Payment_Information__c</fullName>
    <label>Encrypted Payment Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>