force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Estimation_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Date__c</fullName>
    <label>Estimation Date</label>
    <type>Date</type>
</CustomField>