force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Exclude_from_HSC_chatter_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_HSC_chatter_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be mapped to the session that is being processed controls if batch asc_BATCH_HSCNotifications posts chatter notifications for HSC in the session.</description>
    <label>Exclude from HSC chatter Notifications</label>
    <type>Checkbox</type>
</CustomField>