force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/GIFT_CO_MATCH_CD__c.field-meta.xml
<CustomField>
    <fullName>GIFT_CO_MATCH_CD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Co Match</label>
    <type>Checkbox</type>
</CustomField>