force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Gift_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Gift_Receipt_Number__c</fullName>
    <label>Gift Receipt Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>