force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Historical_Gift_Number_s__c.field-meta.xml
<CustomField>
    <fullName>Historical_Gift_Number_s__c</fullName>
    <label>Historical Gift Number/s</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>