force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Imod_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Imod_Member_ID__c</fullName>
    <label>Imod Member ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>