force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/iMod_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>iMod_Transaction_ID__c</fullName>
    <externalId>true</externalId>
    <label>iMod Transaction ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>