force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Installment_Amount_8__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount_8__c</fullName>
    <label>Installment Amount 8</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>