force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Installment_Date_6__c.field-meta.xml
<CustomField>
    <fullName>Installment_Date_6__c</fullName>
    <label>Installment Date 6</label>
    <type>Date</type>
</CustomField>