force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Installment_Frequency_10__c.field-meta.xml
<CustomField>
    <fullName>Installment_Frequency_10__c</fullName>
    <label>Installment Frequency 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Installment_Frequency</valueSetName>
    </valueSet>
</CustomField>