force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <length>50</length>
    <type>Text</type>
</CustomField>