force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Interim_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Interim_Record_Type_ID__c</fullName>
    <label>Interim Record Type ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>