force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Interim_Status__c.field-meta.xml
<CustomField>
    <fullName>Interim_Status__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Interim__r.ucinn_ascendv2__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interim Status</label>
    <type>Text</type>
</CustomField>