force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ISUAA_Auto_Bill__c.field-meta.xml
<CustomField>
    <fullName>ISUAA_Auto_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISUAA Auto Bill</label>
    <type>Checkbox</type>
</CustomField>