force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ISUAA_Membership_Amount__c.field-meta.xml
<CustomField>
    <fullName>ISUAA_Membership_Amount__c</fullName>
    <label>ISUAA Membership Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>