force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ISUF_Pledge_Payment_Overage_Formula__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Pledge_Payment_Overage_Formula__c</fullName>
    <description>This formula field is used to determine whether a warning message should be displayed on RT page layouts to let processors know the payment amount on this RT row exceeds the amount remaining on the related pledge.</description>
    <formula>IF(
	AND(
		ISPICKVAL(ucinn_ascendv2__Transaction_Type__c, &quot;Pledge Payment&quot;),
		NOT(
			ISPICKVAL(ucinn_ascendv2__Status__c, &quot;Posted&quot;)
		),
		(
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_1_1__c)), ucinn_ascendv2__Payment_Amount_1_1__c, 0) + 
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_1_2__c)), ucinn_ascendv2__Payment_Amount_1_2__c, 0) +  
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_2_1__c)), ucinn_ascendv2__Payment_Amount_2_1__c, 0) +  
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_2_2__c)), ucinn_ascendv2__Payment_Amount_2_2__c, 0) +  
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_3_1__c)), ucinn_ascendv2__Payment_Amount_3_1__c, 0) +  
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_3_2__c)), ucinn_ascendv2__Payment_Amount_3_2__c, 0) +  
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_4_1__c)), ucinn_ascendv2__Payment_Amount_4_1__c, 0) +  
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_4_2__c)), ucinn_ascendv2__Payment_Amount_4_2__c, 0) +  
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_5_1__c)), ucinn_ascendv2__Payment_Amount_5_1__c, 0) + 
		IF(NOT(ISNULL(ucinn_ascendv2__Payment_Amount_5_2__c)), ucinn_ascendv2__Payment_Amount_5_2__c, 0) +  
		IF(NOT(ISNULL(Payment_Amount_7_1__c)), Payment_Amount_7_1__c, 0) + 
		IF(NOT(ISNULL(Payment_Amount_6_1__c)), Payment_Amount_6_1__c, 0) +  
		IF(NOT(ISNULL(Payment_Amount_8_1__c)), Payment_Amount_8_1__c, 0) +  
		IF(NOT(ISNULL(Payment_Amount_9_1__c)), Payment_Amount_9_1__c, 0) +  
		IF(NOT(ISNULL(Payment_Amount_10_1__c)), Payment_Amount_10_1__c, 0) 
		) &gt;  ucinn_ascendv2__Opportunity__r.ucinn_ascendv2__Remaining_Amount_Due_Formula__c), 
	TRUE, 
	FALSE
)</formula>
    <label>Pledge Payment Overage</label>
    <type>Checkbox</type>
</CustomField>