force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ISUF_Session_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Session_Batch_Number__c</fullName>
    <description>Pulls the batch number from the parent session down to the RT row, Intially added for RT rows that came from donor portal giving pages as they come in with a bank batch number and its set on the session itself instead.</description>
    <formula>ucinn_ascendv2__Session__r.Batch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Batch Number</label>
    <type>Text</type>
</CustomField>