force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Joint_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Joint_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Joint Recipient)</relationshipLabel>
    <relationshipName>Review_Transactions_v21_del</relationshipName>
    <type>Lookup</type>
</CustomField>