force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Match_Total__c.field-meta.xml
<CustomField>
    <fullName>Match_Total__c</fullName>
    <label>Match Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>