force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Type</valueSetName>
    </valueSet>
</CustomField>