force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Membership_Dues_Amount__c.field-meta.xml
<CustomField>
    <fullName>Membership_Dues_Amount__c</fullName>
    <label>Membership Dues Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>