force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <label>Membership Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>