force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Membership_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Membership_Record_ID__c</fullName>
    <label>Membership Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>