force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Membership_Source__c.field-meta.xml
<CustomField>
    <fullName>Membership_Source__c</fullName>
    <label>Membership Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Source</valueSetName>
    </valueSet>
</CustomField>