force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Non_Gift_Item_1_1__c.field-meta.xml
<CustomField>
    <fullName>Non_Gift_Item_1_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to products to help add premiums to RT rows. this lookup is optional but does help see that the premium looking was successful when an rt row contains a 	ucinn_ascendv2__Non_Gift_Item_External_ID_1_1__c</description>
    <label>Non-Gift Item 1 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Review Transactions (v2)</relationshipLabel>
    <relationshipName>Review_Transactions_v2</relationshipName>
    <type>Lookup</type>
</CustomField>