force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Opportunity Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>