force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>