force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Number_of_Installments_8__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Installments_8__c</fullName>
    <label>Number of Installments 8</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>