force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Opportunity_Receipt_Notes__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Receipt_Notes__c</fullName>
    <label>Opportunity Receipt Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>