force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Payment_Amount_8_1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_8_1__c</fullName>
    <label>Payment Amount 8 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>