force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Payment_Custom_External_ID_7_1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Custom_External_ID_7_1__c</fullName>
    <label>Payment Custom External ID 7 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>