force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Payment_Date_7_1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_7_1__c</fullName>
    <label>Payment Date 7 1</label>
    <type>Date</type>
</CustomField>