force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <inlineHelpText>IRA/Transfer to ISU</inlineHelpText>
    <label>Payment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>