force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Payment_Receipt_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt_Notes__c</fullName>
    <inlineHelpText>In Memory or In Honor</inlineHelpText>
    <label>Payment Receipt Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>