force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Payout_Term__c.field-meta.xml
<CustomField>
    <fullName>Payout_Term__c</fullName>
    <label>Payout Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Code</fullName>
            </value>
            <value>
                <fullName>An - Annual</fullName>
            </value>
            <value>
                <fullName>Mo - Monthly</fullName>
            </value>
            <value>
                <fullName>QT- Quarterly</fullName>
            </value>
            <value>
                <fullName>SA - Semi Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>