force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Picklist_Country__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Country__c</fullName>
    <label>Picklist Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_custom</valueSetName>
    </valueSet>
</CustomField>