force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Picklist_State__c.field-meta.xml
<CustomField>
    <fullName>Picklist_State__c</fullName>
    <label>Picklist State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>