force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Pledge_Reminder_Preference__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Reminder_Preference__c</fullName>
    <description>Used in Call center action screen flow for pledges without payments.</description>
    <inlineHelpText>Donor preference on how they receive their pledge reminder, stored on the opportunity.</inlineHelpText>
    <label>Pledge Reminder Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>