force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Preferred_Address__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Address__c</fullName>
    <label>Preferred Address</label>
    <length>25</length>
    <type>Text</type>
</CustomField>