force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <label>Preferred Email</label>
    <length>25</length>
    <type>Text</type>
</CustomField>