force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <label>Preferred Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>