force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Recipient)</relationshipLabel>
    <relationshipName>Review_Transactions_v2</relationshipName>
    <type>Lookup</type>
</CustomField>