force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Recipient_Organization__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Recipient_Org)</relationshipLabel>
    <relationshipName>Review_Transactions_v2</relationshipName>
    <type>Lookup</type>
</CustomField>