force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship_Type</valueSetName>
    </valueSet>
</CustomField>