force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Revocable__c.field-meta.xml
<CustomField>
    <fullName>Revocable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revocable</label>
    <type>Checkbox</type>
</CustomField>