force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Send_Pledge_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_Pledge_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Pledge Reminder</label>
    <type>Checkbox</type>
</CustomField>