force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Session_Approval__c.field-meta.xml
<CustomField>
    <fullName>Session_Approval__c</fullName>
    <label>Session Approval</label>
    <length>25</length>
    <type>Text</type>
</CustomField>