force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Session_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Completed_Date__c</fullName>
    <formula>ucinn_ascendv2__Session__r.ucinn_ascendv2__Session_Totals_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Completed Date</label>
    <type>DateTime</type>
</CustomField>