force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Session_Ready_for_GL__c.field-meta.xml
<CustomField>
    <fullName>Session_Ready_for_GL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session Ready for GL</label>
    <type>Checkbox</type>
</CustomField>