force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Special_Will_Types__c.field-meta.xml
<CustomField>
    <fullName>Special_Will_Types__c</fullName>
    <label>Special Will Types</label>
    <length>50</length>
    <type>Text</type>
</CustomField>