force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/Tender_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Tender_Type_3__c</fullName>
    <label>Tender Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tender_Type</valueSetName>
    </valueSet>
</CustomField>